--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="content">
     <h1>Print<br />Designer<br />goes<br />digital</h1>
   </div>
-  <div id="aboutcontainer">
+  <div id="about">
     <div class="row">
       <div class="col-sm-4">
         <h2>WHO AM I?</h2>
