--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <a href="#" id="active">ABOUT ME</a>
     </nav>
   </header>
-  <div class="content">
+  <div class="about">
     <h1>Print<br />Designer<br />goes<br />digital</h1>
   </div>
-  <div id="about">
+  <div id="aboutcontainer">
     <div class="row">
       <div class="col-sm-4">
         <h2>WHO AM I?</h2>
