--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="#" id="active">ABOUT ME</a>
     </nav>
   </header>
-  <div class="about">
+  <div id="about">
     <h1>Print<br />Designer<br />goes<br />digital</h1>
   </div>
   <div id="aboutcontainer">
