updates to css and contact page

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
     <a href="about.html">ABOUT ME</a>
     </nav>
   </header>
-  <div id="about">
-    <h1>Print<br />Designer<br />goes<br />digital</h1>
+  <div id="contact">
+    <h1>Where<br />can you<br />find me?</h1>
   </div>
   <div id="aboutcontainer">
     <div class="row">
