updates to contact page

--- a/contact.html
+++ b/contact.html
@@ -30,22 +30,32 @@
   </div>
   <div id="aboutcontainer">
     <div class="row">
-      <div class="col-sm-4">
-        <h2>WHO AM I?</h2>
+      <div class="col-sm-3">
+        <img src="img/github.png" class="contactlogo">
+        <a href="http://" target="_blank"><h2>GITHUB</h2></a>
         <p>
-          I'm a print designer by trade with over ten years of experience in the field. My concentration has been retail design, including, but not limited to, signage, preprint, newspaper, large format advertising, web graphics and e-mail.
+          If you want to see how many times it took me to get this contact page right (hint: too many), check me out on GitHub!
         </p>
       </div>
-      <div class="col-sm-4">
-        <h2>WHAT'S THIS ALL ABOUT?</h2>
+      <div class="col-sm-3">
+        <img src="img/codepen.png" class="contactlogo">
+        <a href="http://" target="_blank"><h2>CODEPEN</h2></a>
         <p>
-          In an effort to learn web development from the ground up, this entire site will be hand-coded. Not a single part of it has been copied from any source. When I'm done, I'll have a basic understanding of HTML5, CSS3, Javascript and jQuery.
+          A digital sandbox where developers can easily try out code and see the results in real time. Check out the picked pens, there's some amazing work in there.
         </p>
       </div>
-      <div class="col-sm-4">
-        <h2>OTHER INTERESTS</h2>
+      <div class="col-sm-3">
+        <img src="img/freecodecamp.svg" class="contactlogo">
+        <a href="http://" target="_blank"><h2>FREE CODE CAMP</h2></a>
         <p>
-          My interests outside of design and coding include listening to music, cooking and way too much fantasy football.
+          One of numerous free coding resources out there. I took a bunch of courses here before taking Web Dev 100 at New York Code + Design Academy, and it was extremely helpful.
+        </p>
+      </div>
+      <div class="col-sm-3">
+        <img src="img/flickr.jpg" class="contactlogo">
+        <a href="http://" target="_blank"><h2>FLICKR</h2></a>
+        <p>
+          Before I was a coder or a print designer, photography was my love. My interest has waned over the years, but my thousands of images still live on thanks to Flickr.
         </p>
       </div>
     </div>
