adjusted active nav for index

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <header>
     <p>Sean Naber</p>
     <nav class="navigation">
-    <a href="index.html">HOME</a>
+    <a href="index.html" id="active">HOME</a>
     <a href="contact.html">CONTACT</a>
     <a href="gallery.html">GALLERY</a>
-    <a href="#" id="active">ABOUT ME</a>
+    <a href="about.html">ABOUT ME</a>
     </nav>
   </header>
   <div id="about">
