Added bootstrap buttons to contact page

--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,9 @@
         <img src="img/github.png" class="contactlogo">
         <h2><a href="https://github.com/Seannaber" target="_blank">GITHUB</a></h2>
         <p>
-          If you want to see how many times it took me to get this contact page right (hint: too many), check me out on GitHub!
+          If you want to see how many times it took me to get this contact page right (hint: too many), check me out on GitHub.
         </p>
+        <a href="https://github.com/Seannaber" target="_blank"><button class="btn btn-default">Visit</button></a>
       </div>
       <div class="col-sm-3">
         <img src="img/codepen.png" class="contactlogo">
@@ -43,6 +44,7 @@
         <p>
           A digital sandbox where developers can easily try out code and see the results in real time. Check out the picked pens, there's some amazing work in there.
         </p>
+        <a href="http://codepen.io/seannaber/" target="_blank"><button class="btn btn-default">Visit</button></a>
       </div>
       <div class="col-sm-3">
         <img src="img/freecodecamp.svg" class="contactlogo">
@@ -50,13 +52,15 @@
         <p>
           One of numerous free coding resources out there. I took a bunch of courses here before taking Web Dev 100 at New York Code + Design Academy, and it was extremely helpful.
         </p>
+        <a href="https://www.freecodecamp.com/seannaber" target="_blank"><button class="btn btn-default">Visit</button></a>
       </div>
       <div class="col-sm-3">
         <img src="img/flickr.jpg" class="contactlogo">
         <h2><a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank">FLICKR</a></h2>
         <p>
-          Before I was a coder or a print designer, photography was my love. My interest has waned over the years, but my thousands of images still live on thanks to Flickr.
+          Before I was a coder or a print designer, photography was my passion. My interest has waned over the years, but my thousands of images still live on thanks to Flickr.
         </p>
+        <a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank"><button class="btn btn-default">Visit</button></a>
       </div>
     </div>
   </div>
