--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sean Naber</title>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat:700|Oswald:700|Lora|Fanwood+Text|Averia+Serif+Libre|Cormorant+Garamond" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -14,6 +15,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <script src="https://use.fontawesome.com/4bab8f622c.js"></script>
 </head>
 <body>
   <header>
@@ -31,36 +33,36 @@
   <div id="aboutcontainer">
     <div class="row">
       <div class="col-sm-3">
-        <img src="img/github.png" class="contactlogo">
-        <h2><a href="https://github.com/Seannaber" target="_blank">GITHUB</a></h2>
+        <i class="fa fa-github fa-3x"></i>
+        <h2 class="contacthead"><a href="https://github.com/Seannaber" target="_blank">GITHUB</a></h2>
         <p>
           If you want to see how many times it took me to get this contact page right (hint: too many), check me out on GitHub.
         </p>
-        <a href="https://github.com/Seannaber" target="_blank"><button class="btn btn-default">Visit</button></a>
+        <a href="https://github.com/Seannaber" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
       <div class="col-sm-3">
-        <img src="img/codepen.png" class="contactlogo">
-        <h2><a href="http://codepen.io/seannaber/" target="_blank">CODEPEN</a></h2>
+        <i class="fa fa-codepen fa-3x"></i>
+        <h2 class="contacthead"><a href="http://codepen.io/seannaber/" target="_blank">CODEPEN</a></h2>
         <p>
           A digital sandbox where developers can easily try out code and see the results in real time. Check out the picked pens, there's some amazing work in there.
         </p>
-        <a href="http://codepen.io/seannaber/" target="_blank"><button class="btn btn-default">Visit</button></a>
+        <a href="http://codepen.io/seannaber/" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
       <div class="col-sm-3">
-        <img src="img/freecodecamp.svg" class="contactlogo">
-        <h2><a href="https://www.freecodecamp.com/seannaber" target="_blank">FREE CODE CAMP</a></h2>
+        <i class="fa fa-free-code-camp fa-3x"></i>
+        <h2 class="contacthead"><a href="https://www.freecodecamp.com/seannaber" target="_blank">FCC</a></h2>
         <p>
-          One of numerous free coding resources out there. I took a bunch of courses here before taking Web Dev 100 at New York Code + Design Academy, and it was extremely helpful.
+          Free Code Camp is one of numerous free coding resources out there. I took a bunch of courses here before taking Web Dev 100 at New York Code + Design Academy, and it was extremely helpful.
         </p>
-        <a href="https://www.freecodecamp.com/seannaber" target="_blank"><button class="btn btn-default">Visit</button></a>
+        <a href="https://www.freecodecamp.com/seannaber" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
       <div class="col-sm-3">
-        <img src="img/flickr.jpg" class="contactlogo">
-        <h2><a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank">FLICKR</a></h2>
+        <i class="fa fa-flickr fa-3x"></i>
+        <h2 class="contacthead"><a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank">FLICKR</a></h2>
         <p>
           Before I was a coder or a print designer, photography was my passion. My interest has waned over the years, but my thousands of images still live on thanks to Flickr.
         </p>
-        <a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank"><button class="btn btn-default">Visit</button></a>
+        <a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
     </div>
   </div>
