--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
   </div>
   <div id="aboutcontainer">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-github fa-3x"></i>
         <h2 class="contacthead"><a href="https://github.com/Seannaber" target="_blank">GITHUB</a></h2>
         <p>
@@ -40,7 +40,7 @@
         </p>
         <a href="https://github.com/Seannaber" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-codepen fa-3x"></i>
         <h2 class="contacthead"><a href="http://codepen.io/seannaber/" target="_blank">CODEPEN</a></h2>
         <p>
@@ -48,7 +48,7 @@
         </p>
         <a href="http://codepen.io/seannaber/" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-free-code-camp fa-3x"></i>
         <h2 class="contacthead"><a href="https://www.freecodecamp.com/seannaber" target="_blank">FCC</a></h2>
         <p>
@@ -56,7 +56,7 @@
         </p>
         <a href="https://www.freecodecamp.com/seannaber" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-flickr fa-3x"></i>
         <h2 class="contacthead"><a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank">FLICKR</a></h2>
         <p>
