--- a/contact.html
+++ b/contact.html
@@ -21,76 +21,50 @@
   <header>
     <p>Sean Naber</p>
     <nav class="navigation">
-    <a href="index.html">HOME</a>
-    <a href="#" id="active">CONTACT</a>
-    <a href="gallery.html">GALLERY</a>
-    <a href="about.html">ABOUT ME</a>
+      <a href="index.html">HOME</a>
+      <a href="#" id="active">CONTACT</a>
+      <a href="gallery.html">GALLERY</a>
+      <a href="about.html">ABOUT ME</a>
     </nav>
   </header>
   <div id="contact">
     <h1>Where<br />can you<br />find me?</h1>
   </div>
-  <div id="aboutcontainer">
-    <div class="row">
-      <div class="col-sm-3 col-xs-6 text-center">
+  <main id="aboutcontainer">
+    <section class="row">
+      <article class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-github fa-3x"></i>
         <h2 class="contacthead"><a href="https://github.com/Seannaber" target="_blank">GITHUB</a></h2>
         <p>
           If you want to see how many times it took me to get this contact page right (hint: too many), check me out on GitHub.
         </p>
         <a href="https://github.com/Seannaber" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
-      </div>
-      <div class="col-sm-3 col-xs-6 text-center">
+      </article>
+      <article class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-codepen fa-3x"></i>
         <h2 class="contacthead"><a href="http://codepen.io/seannaber/" target="_blank">CODEPEN</a></h2>
         <p>
           A digital sandbox where developers can easily try out code and see the results in real time. Check out the picked pens, there's some amazing work in there.
         </p>
         <a href="http://codepen.io/seannaber/" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
-      </div>
-      <div class="col-sm-3 col-xs-6 text-center">
+      </article>
+      <article class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-free-code-camp fa-3x"></i>
         <h2 class="contacthead"><a href="https://www.freecodecamp.com/seannaber" target="_blank">FCC</a></h2>
         <p>
           Free Code Camp is one of numerous free coding resources out there. I took a bunch of courses here before taking Web Dev 100 at New York Code + Design Academy, and it was extremely helpful.
         </p>
         <a href="https://www.freecodecamp.com/seannaber" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
-      </div>
-      <div class="col-sm-3 col-xs-6 text-center">
+      </article>
+      <article class="col-sm-3 col-xs-6 text-center">
         <i class="fa fa-flickr fa-3x"></i>
         <h2 class="contacthead"><a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank">FLICKR</a></h2>
         <p>
           Before I was a coder or a print designer, photography was my passion. My interest has waned over the years, but my thousands of images still live on thanks to Flickr.
         </p>
         <a href="https://www.flickr.com/photos/seannaber/albums/72157612126830058" target="_blank"><button class="btn btn-default">Visit <i class="fa fa-caret-right"></i></button></a>
-      </div>
-    </div>
-  </div>
-
-<!--
-      <div class="about">
-      <h2>WHO AM I?</h2>
-      <p>
-        I'm a print designer by trade with over ten years of experience in the field. My concentration has been retail design, including, but not limited to, signage, preprint, newspaper, large format advertising, web graphics and e-mail.
-      </p>
-    </div>
-    <div class="about">
-      <h2>WHAT'S THIS ALL ABOUT?</h2>
-      <p>
-        In an effort to learn web development from the ground up, this entire site will be hand-coded. Not a single part of it has been copied from any source. When I'm done, I'll have a basic understanding of HTML5, CSS3, Javascript and jQuery.
-      </p>
-    </div>
-    <div class="about">
-      <h2>OTHER INTERESTS</h2>
-      <p>
-        My interests outside of design and coding include listening to music, cooking and way too much fantasy football.
-      </p>
-    </div>
-  </div>
-   <h2>MORE ABOUT ME</h2>
-    <p>
-      I'm recently married to my beautiful wife, Becca, and live in Silver Spring, MD with two cats named Gustavo and Peppers. <a href="http://www.cnn.com">Test Link ></a>
-    </p> -->
-
+      </article>
+    </section>
+  </main>
 </body>
 </html>
