--- a/gallery.html
+++ b/gallery.html
@@ -19,21 +19,21 @@
   <header>
     <p>Sean Naber</p>
     <nav class="navigation">
-    <a href="index.html">HOME</a>
-    <a href="contact.html">CONTACT</a>
-    <a href="gallery.html" id="active">GALLERY</a>
-    <a href="about.html">ABOUT ME</a>
+      <a href="index.html">HOME</a>
+      <a href="contact.html">CONTACT</a>
+      <a href="#" id="active">GALLERY</a>
+      <a href="about.html">ABOUT ME</a>
     </nav>
   </header>
   <div id="gallery">
     <h1>Image<br />Gallery<br />Exercise</h1>
   </div>
-  <div id="aboutcontainer">
+  <main id="aboutcontainer">
     <h2>IMAGES OF SPACE</h2>
     <p>
       Space pictures are great in all circumstances, so I chose to show a gallery of space images. Because Space.
     </p>
-    <div class="row">
+    <article class="row">
       <div class="col-sm-4">
         <img src="img/pic.jpg">
       </div>
@@ -43,8 +43,8 @@
       <div class="col-sm-4">
         <img src="img/pic3.jpg">
       </div>
-    </div>
-    <div class="row">
+    </article>
+    <article class="row">
       <div class="col-sm-4">
         <img src="img/pic4.jpg">
       </div>
@@ -54,8 +54,8 @@
       <div class="col-sm-4">
         <img src="img/pic6.jpg">
       </div>
-    </div>
-    <div class="row">
+    </article>
+    <article class="row">
       <div class="col-sm-4">
         <img src="img/pic7.jpg">
       </div>
@@ -65,7 +65,7 @@
       <div class="col-sm-4">
         <img src="img/pic9.jpg">
       </div>
-    </div>
-  </div>
+    </article>
+  </main>
 </body>
 </html>
