added 'weather' to interests in about page closes #1

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <article class="col-sm-4">
         <h2>OTHER INTERESTS</h2>
         <p>
-          My interests outside of design and coding include listening to music, cooking and way too much fantasy football.
+          My interests outside of design and coding include listening to music, cooking, the weather and way too much fantasy football.
         </p>
       </article>
     </section>
